# NetDrone

./: .gitignore  NetDrone.sln  README.md
.github/workflows/: dotnet.yml
GodotDroneVisualization/: .gitignore  GodotDroneVisualization.csproj  GodotDroneVisualization.sln  main_scene.tscn  project.godot  runDroneProgram.sh  runNetDrone.sh  runOperatorProgram.sh
GodotDroneVisualization/Assets/: drone.png.import  map_2.png.import
GodotDroneVisualization/Entities/: ApplicationMode.cs  Drone.cs  DroneService.cs  DroneService.cs.uid  NetDroneApplication.cs  NetDroneApplication.cs.uid  OperatorService.cs  OperatorService.cs.uid  PanelContainer.cs  PanelContainer.cs.uid
GodotDroneVisualization/utils/: ApplicationMode.cs.uid  PanelContainer.cs  RefreshCycle.cs  TickSystem.cs  TickSystem.cs.uid
NetDroneClient/: NetDroneClient.sln  README.md
NetDroneClient/NetDroneClient/: NetDroneClient.csproj  (+1 more)
NetDroneServerImpl/: NetDroneServerImpl.csproj  NetDroneServerImpl.sln  Program.cs
NetDroneServerLib/: NetDroneServer.cs  NetDroneServerLib.csproj  NetDroneServerLib.sln
NetDroneServerLib.Test/: IpEndPointRepositoryTests.cs  MessageTests.cs  NetDroneServerLib.Test.csproj
NetDroneVisualization/: NetDroneVisualization.csproj  Program.cs
client/: NetDroneClient.csproj  drone_scene.tscn  project.godot  run.sh
net_drone_client/: README.md  net_drone_client.sln
net_drone_server/: Cargo.toml
net_drone_server/src/: main.rs  message.rs  server.rs
net_drone_server/test/: message_test.rs
net_drone_visualization/: NetDroneClient.csproj  NetDroneClient.sln  drone_scene.tscn
(+68 files in other folders)
