[package]
name = "drone_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
name = "drone_server"
path = "src/lib.rs"

[[bin]]
name = "drone_server_bin"
path = "src/main.rs"